# fm

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README-zh.md  README.md  REQUIREMENTS.md  fm.1  fm.desktop  resources.qrc
.github/workflows/: build-image.yml  ci.yml  release.yml
docker/: Dockerfile.debian-trixie  Dockerfile.fedora-42
src/: main.cpp
src/app/: fm_application.cpp  fm_application.h  single_instance.cpp  single_instance.h  version.h.in
src/core/: clipboard_manager.cpp  clipboard_manager.h  column_manager.cpp  column_manager.h  config_manager.cpp  config_manager.h  favorite_manager.cpp  favorite_manager.h  open_with_manager.cpp  open_with_manager.h  session_state.cpp  session_state.h  shortcut_manager.cpp  shortcut_manager.h  volume_manager.cpp  volume_manager.h
src/dialogs/: about_dialog.cpp  about_dialog.h  conflict_dialog.cpp  conflict_dialog.h  error_dialog.cpp  error_dialog.h  input_name_dialog.cpp  input_name_dialog.h  isettings_page.h  open_with_dialog.cpp  open_with_dialog.h  properties_dialog.cpp  properties_dialog.h  settings_dialog.cpp  settings_dialog.h  settings_pages.cpp  settings_pages.h
src/filelist/: file_item.cpp  file_item.h  file_list_model.cpp  file_list_model.h  file_list_sort_proxy.cpp  file_list_sort_proxy.h  file_list_view.cpp  file_list_view.h
src/fileops/: conflict_resolver.cpp  conflict_resolver.h  copy_move_job.cpp  copy_move_job.h  file_job.cpp  file_job.h  file_operations.cpp  file_operations.h  progress_dialog.cpp  progress_dialog.h  trash_can.cpp  trash_can.h
src/panel/: file_tab_bar.cpp  file_tab_bar.h  panel_container.cpp  panel_container.h  panel_id.h  panel_widget.cpp  panel_widget.h
src/ui/: favorites_menu_controller.cpp  favorites_menu_controller.h  main_window.cpp  main_window.h  volume_menu.cpp  volume_menu.h  volume_menu_controller.cpp  volume_menu_controller.h
tests/: CMakeLists.txt  test_config_manager.cpp  test_favorite_manager.cpp  test_main.cpp  test_shortcut_manager.cpp
translations/: fm_en.ts  fm_zh.ts  translate.py
